Add bower for client-side dependencies

--- a/example/index.html
+++ b/example/index.html
@@ -36,9 +36,9 @@
   <h1>Example</h1>
   <div id="chart"></div>
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.2/d3.js"></script>
-  <script src="http://misoproject.com/js/d3.chart.js"></script>
-  <script src="http://underscorejs.org/underscore-min.js"></script>
+  <script src="../bower_components/d3/d3.js"></script>
+  <script src="../bower_components/d3.chart/d3.chart.js"></script>
+  <script src="../bower_components/underscore/underscore.js"></script>
   <script src="../d3.chart.csnw.line-bar.js"></script>
   <script type="text/javascript">
     var deaths_prevented = [
