Update label chart and value axis

--- a/example/index.html
+++ b/example/index.html
@@ -57,7 +57,10 @@
     // TODO, add transformed data here
     var data = {
       'Bars': people_participating,
-      'Line': deaths_prevented
+      'Line': deaths_prevented,
+      'BottomAxis': people_participating,
+      'LeftAxis': people_participating,
+      'RightAxis': deaths_prevented
     };
 
     var chart = d3.select('#chart')
