Add grunt build

--- a/example/index.html
+++ b/example/index.html
@@ -16,8 +16,8 @@
   <script src="../bower_components/d3/d3.js"></script>
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
-  <script src="../d3.chart.csnw.extensions.js"></script>
-  <script src="../d3.chart.csnw.configurable.js"></script>
+
+  <script src="../dist/d3.chart.csnw.configurable.js"></script>
 
   <script src="data.js"></script>
   <script type="text/javascript">
