Start legend component

--- a/example/index.html
+++ b/example/index.html
@@ -58,7 +58,12 @@
             dataKey: 'deathsPrevented',
             axisPosition: 'right'
           }
-        ]
+        ],
+        legend: {
+          type: 'InsetLegend',
+          dataKey: 'legend',
+          legendPosition: {x: 10, y: 0}
+        }
       })
       .width(600)
       .height(400)
