Update label and legend positioning

--- a/example/index.html
+++ b/example/index.html
@@ -33,7 +33,8 @@
             dataKey: 'peopleParticipating', 
             yScale: {domain: [0, 20000]}, 
             labelFontSize: 14,
-            labelOffset: 5
+            labelOffset: 10,
+            labelPosition: 'top|bottom'
           },
           {
             type: 'LineValues', 
