Change build configuration

--- a/example/index.html
+++ b/example/index.html
@@ -23,7 +23,7 @@
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
 
-  <script src="../dist/d3.chart.csnw.configurable.js"></script>
+  <script src="../tmp/d3.chart.csnw.configurable.js"></script>
 
   <script src="data.js"></script>
   <script type="text/javascript">
