Add .less compilation

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" type="text/css" href="../src/styles/csnw.configurable.base.css">
+  <link rel="stylesheet" type="text/css" href="../dist/styles/d3.chart.csnw.configurable.base.css">
   <style>
     .series.deaths-prevented .line, .legend-swatch.deaths-prevented .line {
       stroke: red;
