Dramatically simplify build

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" type="text/css" href="../dist/styles/d3.chart.csnw.configurable.base.css">
+  <link rel="stylesheet" type="text/css" href="../src/styles/base.css">
   <style>
     .series.deaths-prevented .line, .legend-swatch.deaths-prevented .line {
       stroke: red;
@@ -23,7 +23,12 @@
   <script src="../bower_components/d3.chart/d3.chart.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
 
-  <script src="../dist/d3.chart.csnw.configurable.js"></script>
+  <script src="../src/helpers.js"></script>
+  <script src="../src/extensions.js"></script>
+  <script src="../src/base.js"></script>
+  <script src="../src/charts.js"></script>
+  <script src="../src/components.js"></script>
+  <script src="../src/configurable.js"></script>
 
   <script src="data.js"></script>
   <script type="text/javascript">
