Update seriesIndex to improve performance

--- a/example/index.html
+++ b/example/index.html
@@ -45,7 +45,8 @@
             yScale: {domain: [0, 20000]}, 
             labelFontSize: 14,
             labelOffset: 10,
-            labelPosition: 'top|bottom'
+            labelPosition: 'top|bottom',
+            displayAdjacent: true
           },
           {
             type: 'LineValues', 
