Update axis implementation

--- a/example/index.html
+++ b/example/index.html
@@ -37,11 +37,11 @@
     var chart1 = d3.select('#chart_1')
       .append('svg')
       .chart('Configurable', {
+        type: 'Values',
         charts: [
           {
             type: 'Bars', 
             dataKey: 'results', 
-            yScale: {domain: [0, 20000]}, 
             displayAdjacent: true,
             labels: {
               offset: 10,
@@ -54,29 +54,15 @@
           {
             type: 'LineValues', 
             dataKey: 'input', 
-            yScale: {domain: [0, 70]}, 
             labelPosition: 'top'
           }
         ],
-        axes: [
-          {
-            type: 'AxisValues',
-            dataKey: 'results',
-            axisPosition: 'bottom'
-          },
-          {
-            type: 'AxisValues',
-            dataKey: 'results',
-            axisPosition: 'left'
-          },
-          {
-            type: 'AxisValues',
-            dataKey: 'input',
-            axisPosition: 'right'
-          }
-        ],
+        axes: {
+          y: {scale: {domain: [0, 70]}},
+          y2: {dataKey: 'results', scale: {domain: [0, 20000]}}
+        },
         legend: {
-          type: 'InsetLegend',
+          type: 'Inset',
           legendPosition: {x: 10, y: 0}
         }
       })
