Chart x2/y2 to secondaryX/secondaryY

--- a/example/index.html
+++ b/example/index.html
@@ -61,7 +61,7 @@
         ],
         axes: {
           y: {scale: {domain: [0, 20000]}},
-          y2: {dataKey: 'input', scale: {domain: [0, 70]}}
+          secondaryY: {dataKey: 'input', scale: {domain: [0, 70]}}
         },
         legend: {
           type: 'Inset',
