Fix breaking legend changes

--- a/example/index.html
+++ b/example/index.html
@@ -65,7 +65,7 @@
         },
         legend: {
           type: 'Inset',
-          legendPosition: {x: 10, y: 0}
+          position: {x: 10, y: 0}
         },
         title: 'Chart Title'
       })
