--- a/example/index.html
+++ b/example/index.html
@@ -7,18 +7,17 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css"> -->
-  <!--<link rel="stylesheet" type="text/css" href="css/main.css">-->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
 
   <link rel="stylesheet" type="text/css" href="../src/css/base.css">
   <style>
-    .series.input .line, .legend-swatch.input .line {
+    .input .chart-line, .input .chart-line {
       stroke-dasharray: 4,4;
     }
 
     .example {
-
+      clear: both;
     }
     .example-chart {
       float: left;
@@ -33,10 +32,10 @@
   <div class="container">
     <h1>d3.chart.csnw.configurable Example</h1>
 
-    <section class="example">
+    <section class="example clearfix">
       <h2>Line-Bar Chart with Labels and Separate Y-Axes</h2>
       <div class="example-chart" id="chart-1"></div>
-      <div class="example-code">
+      <!-- <div class="example-code">
 <pre><code>
 var config = {
   type: 'Values',
@@ -79,7 +78,17 @@ var config = {
   },
   title: 'Chart Title'
 };</code></pre>
-      </div>
+      </div> -->
+    </section>
+    
+    <section class="example clearfix">
+      <h2>Lines</h2>
+      <div class="example-chart" id="chart-2"></div>
+    </section>
+
+    <section class="example clearfix">
+      <h2>Bars</h2>
+      <div class="example-chart" id="chart-3"></div>
     </section>
   </div>
 
@@ -102,56 +111,110 @@ var config = {
     /**
       Chart 1: Line-Bar Values with separate y-axes
     */
+    var chart1Config = {
+      type: 'Values',
+      charts: [
+        {
+          type: 'Bars', 
+          dataKey: 'results', 
+          labels: {
+            offset: 8,
+            position: 'top|bottom',
+            style: {
+              'font-size': '14px'
+            }
+          }
+        },
+        {
+          type: 'Lines',
+          dataKey: 'input',
+          labels: {
+            position: 'top'
+          }
+        }
+      ],
+      axes: {
+        x: {
+          title: 'X Title'
+        },
+        y: {
+          scale: {domain: [0, 20000]}, 
+          title: 'Y1 Title'
+        },
+        secondaryY: {
+          dataKey: 'input', 
+          scale: {domain: [0, 70]}, 
+          title: 'Y2 Title'
+        }
+      },
+      legend: {
+        type: 'Inset',
+        position: {x: 10, y: 0}
+      },
+      title: 'Chart Title'
+    };
+
     var chart1 = d3.select('#chart-1')
       .append('svg')
-      .chart('Configurable', {
-        type: 'Values',
-        charts: [
-          {
-            type: 'Bars', 
-            dataKey: 'results', 
-            displayAdjacent: true,
-            labels: {
-              offset: 8,
-              position: 'top|bottom',
-              style: {
-                'font-size': '14px'
-              }
-            }
-          },
-          {
-            type: 'Lines',
-            dataKey: 'input',
-            labels: {
-              position: 'top'
-            }
-          }
-        ],
-        axes: {
-          x: {
-            title: 'X Title'
-          },
-          y: {
-            scale: {domain: [0, 20000]}, 
-            title: 'Y1 Title'
-          },
-          secondaryY: {
-            dataKey: 'input', 
-            scale: {domain: [0, 70]}, 
-            title: 'Y2 Title'
-          }
-        },
-        legend: {
-          type: 'Inset',
-          position: {x: 10, y: 0}
-        },
-        title: 'Chart Title'
-      })
+      .chart('Configurable', chart1Config)
       .width(600)
       .height(400)
-      .chartMargins({top: 10});
+      .chartMargins({top: 10, right: 10, bottom: 10, left: 10});
 
     chart1.draw(data.chart1);
+
+    /**
+      Chart 2: Lines
+    */
+    var chart2Config = {
+      type: 'XY',
+      charts: [
+        {type: 'Lines', dataKey: 'lines', showLabels: false},
+        {type: 'Labels', dataKey: 'labels'}
+      ],
+      axes: {
+        x: {scale: {domain: [2000, 2020]}, title: 'Year'},
+        y: {title: 'Results'}
+      },
+      legend: {
+        display: 'right',
+        dataKey: 'lines'
+      },
+      title: 'Results by Year'
+    };
+
+    var chart2 = d3.select('#chart-2')
+      .append('svg')
+      .chart('Configurable', chart2Config)
+      .width(600)
+      .height(400)
+      .chartMargins({top: 10, right: 10, bottom: 10, left: 10});
+
+    chart2.draw(data.chart2);
+
+    /**
+      Chart 3: Simple Bars
+    */
+    var chart3Config = {
+      type: 'Values',
+      charts: [
+        {type: 'Bars', dataKey: 'bars'}
+      ],
+      axes: {
+        x: false,
+        y: {title: 'Results', scale: {domain: [0, 35000]}}
+      },
+      title: 'Results'
+    };
+
+    var chart3 = d3.select('#chart-3')
+      .append('svg')
+      .chart('Configurable', chart3Config)
+      .width(600)
+      .height(400)
+      .chartMargins({top: 10, right: 10, bottom: 10, left: 10});
+
+    chart3.draw(data.chart3);
   </script>
 </body>
 </html>
