--- a/example/index.html
+++ b/example/index.html
@@ -173,7 +173,7 @@ var config = {
         {type: 'Labels', dataKey: 'labels', offset: 5}
       ],
       axes: {
-        x: {scale: {domain: [2000, 2020]}, title: 'Year'},
+        x: {scale: {domain: [2000, 2020]}, title: 'Year', tickFormat: d3.format('####')},
         y: {title: 'Results'}
       },
       legend: {
