--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" type="text/css" href="../src/css/base.css">
   <style>
-    .input .chart-line, .input .chart-line {
+    .input .chart-line, .input2 .chart-line {
       stroke-dasharray: 4,4;
     }
 
@@ -144,7 +144,7 @@ var config = {
         },
         secondaryY: {
           dataKey: 'input', 
-          scale: {domain: [0, 70]}, 
+          scale: {domain: [0, 90]}, 
           title: 'Y2 Title'
         }
       },
