Move data to separate folder and rename d3.data

--- a/data/example/detailed.html
+++ b/data/example/detailed.html
@@ -46,7 +46,7 @@
   <script src="../src/configurable.js"></script>
 
   <script src="../bower_components/rsvp/rsvp.js"></script>
-  <script src="../data/d3.data.js"></script>
+  <script src="../src/data.js"></script>
 
   <script src="data/config.js"></script>
   <script type="text/javascript">
