--- a/example/specs.html
+++ b/example/specs.html
@@ -52,6 +52,7 @@
           },
           run: function(id, options, chart) {
             chart.redraw();
+            $('.chart-title-main').text('Chart Title (Redrawn)');
           }
         });
       </script>
